# deps

./: .gitignore  LICENSE  Makefile  README.md  deps.cabal  deptool.cabal
src/: Config.hs  Dep.hs  DepTool.hs  Downloaders.hs  Scanner.hs
src/Downloaders/: Git.hs  Local.hs
test-data/: Makefile  deps.txt  deptool  get-deps
