name:                deps
version:             0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Eric Moritz
maintainer:          eric@themoritzfamily.com
-- copyright:           
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable get-deps
  hs-source-dirs: src
  main-is: DepTool.hs
  -- other-modules:       
  build-depends:       base >=4.5, 
                       directory >=1.1,
                       filepath >=1.3,
                       process
